# Factorio

./: .gitignore  Cargo.toml  README.md  build.rs  cache.txt  generated.rs  objects.txt  output.lua  parse_errors.txt  prototypes.txt  setup.lua  to_json.lua
api/: Cargo.toml  build.rs  build.txt
api/generator/: mod.rs  type_.rs
api/generator/prototype/: api_format.rs  concept.rs  image.rs  mod.rs  property.rs  prototype.rs
api/generator/runtime/: api_format.rs  attribute.rs  basic_member.rs  builtin_type.rs  class.rs  concept.rs  define.rs  event.rs  global_object.rs  method.rs  mod.rs  operator.rs  parameter.rs
api/json/: prototype-api-v1.1.101.json  prototype-api.json  runtime-api-v1.1.101.json  runtime-api.json
api/prototype/: Cargo.toml  mod.rs  prototype-api.json
api/prototype/defines/: Cargo.toml  build.rs  defines.lua  lua_defines.rs
api/prototype/defines/defines_generator/: Cargo.toml  build.rs  defines.lua  lua_defines.rs
api/prototype/defines/src/: lib.rs
api/prototype/generator/: mod.rs
api/prototype/prototypes/: Cargo.toml
api/prototype/prototypes/prototypes_generator/: Cargo.toml  build.rs
api/prototype/prototypes/prototypes_parser/: Cargo.toml
api/prototype/prototypes/prototypes_parser/src/: lib.rs
api/prototype/prototypes/src/: lib.rs
api/prototype/shared/: Cargo.toml  prototype-api.json
api/prototype/shared/src/: case.rs  concept.rs  custom_property.rs  define.rs  define_value.rs  derive.rs  file_utils.rs  format.rs  image.rs  lib.rs  lua_value.rs  property.rs  prototype.rs  rustfmt.rs  transformation.rs  type_.rs
api/prototype/src/: basic_member.rs  concept.rs  custom_property.rs  define.rs  define_value.rs  format.rs  image.rs  lib.rs  pascal_case.rs  property.rs  prototype.rs
api/prototype/types/: Cargo.toml
api/prototype/types/src/: lib.rs
api/prototype/types/types_generator/: Cargo.toml  build.rs
api/prototype/types/types_generator/src/: lib.rs
api/prototype/types/types_parser/: Cargo.toml
api/prototype/types/types_parser/src/: lib.rs
api/runtime/: mod.rs  runtime-api.json
api/runtime/events/events_generator/: Cargo.toml  build.rs
api/shared/: Cargo.toml
api/shared/src/: attribute.rs  basic_member.rs  class.rs  concept.rs  context.rs  custom_properties.rs  define_value.rs  event.rs  event_raised.rs  file_utils.rs  image.rs  lib.rs  method.rs  method_format.rs  operator.rs  parameter.rs  parameter_group.rs  property.rs  prototype.rs  prototype_concept.rs  prototype_format.rs  runtime_concept.rs  runtime_format.rs  transformation.rs  type_.rs  variadic_parameter.rs
api/src/: lib.rs
extensions/: Cargo.toml
extensions/derives/traversable/: Cargo.toml
extensions/src/: lib.rs
extensions/traits/src/: lib.rs  lua_object.rs  traversable.rs
factorio/: Cargo.toml
factorio/src/: main.rs  recipe.rs  setup.lua
factorio/src/prototype/: crafting_machine.rs  mod.rs  recipe.rs  resource.rs
factorio/src/prototype/crafting_machine/: assembling_machine.rs  furnace.rs  mod.rs  rocket_silo.rs
factorio/src/prototype/item/: mod.rs
factorio/src/prototype/recipe/: ingredient.rs  mod.rs  product.rs
factorio/src/runtime/: mod.rs
lua/: dictionaries.lua  manual_patches.lua  settings.lua  setup.lua  subclasses.lua
remote_console/: Cargo.toml
remote_console/src/: lib.rs
runtime_api/: Cargo.toml  build.txt
runtime_api/runtime_api_format/: mod.rs  runtime-api.json
runtime_api/runtime_api_format/patches/: collision_mask_layer.rs  lua_fluid_production_flow_statistics.rs  (+4 more)
runtime_api/src/: lib.rs
runtime_api_format/: defines.txt  mod.rs
runtime_api_format/patches/: collision_mask_with_flags_union.rs  floating_point.rs  lua_entity_build_flow_statistics.rs  lua_item_production_flow_statistics.rs  lua_pollution_flow_statistics.rs  map_position.rs  maybe_lua_item_stack.rs  render_layer.rs
setup/: get_values.lua  insert_into_cache.lua  lookup.lua  setup.lua  subclasses.lua
src/: main.rs  remote_console.rs  runtime_api.rs  runtime_api_format.rs
(+1 files in other folders)
