[package]
name = "api"
version = "0.1.0"
edition = "2021"

[build-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dependencies]
extensions = { version = "0.1.0", path = "../extensions" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_repr = "0.1.18"
enum-as-inner = "0.6.0"
struct_iterable = "0.1.1"
