[package]
name = "api"
version = "0.1.0"
edition = "2021"

[build-dependencies]
events_generator = { path = "runtime/events/events_generator" }

[dependencies]
#defines = { path = "prototype/defines" }
#prototypes = { path = "prototype/prototypes" }
#types = { path = "prototype/types" }
shared = { path = "shared" }
anyhow = "1.0.95"
serde_json = "1.0.138"
