[package]
name = "factorio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remote_console = { version = "0.1.0", path = "../remote_console" }
api = { version = "0.1.0", path = "../api" }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
