[package]
name = "factorio"
version = "0.1.0"
edition = "2021"

[dependencies]
extensions = { version = "0.1.0", path = "../extensions" }
remote_console = { version = "0.1.0", path = "../remote_console" }
api = { version = "0.1.0", path = "../api" }
anyhow = "1.0.80"
zip = "0.6.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
itertools = "0.12.1"
enigo = "0.2.0"
