[package]
name = "factorio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
remote_console = { version = "0.1.0", path = "../remote_console" }
prototype = { version = "0.1.0", path = "../api/prototype" }
defines = { path = "../api/prototype/defines" }